--- a/M02LoopsAndConditionals.ipynb
+++ b/M02LoopsAndConditionals.ipynb
@@ -4,25 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Daniel Bierman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "secret = 8\n",
+    "guess = 3\n",
+    "if guess == secret:\n",
+    "    print(\"just right\")\n",
+    "elif guess < secret:\n",
+    "    print(\"too low\")\n",
+    "else:\n",
+    "    print(\"too high\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small = False\n",
+    "green = True\n",
+    "\n",
+    "if small:\n",
+    "    if green:\n",
+    "        print(\"A pea is small and green\")\n",
+    "    else:\n",
+    "        print(\"A cherry is small but not green.\")\n",
+    "else: \n",
+    "    if green:\n",
+    "        print(\"A watermelon is green but not small.\")\n",
+    "    else:\n",
+    "        print(\"A pumpking is nether green or small\")"
    ]
   },
   {
@@ -33,10 +66,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_list = [3, 2, 1, 0]\n",
+    "\n",
+    "for number in num_list:\n",
+    "    print(number)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 6.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess_me = 7\n",
+    "number = 1\n",
+    "\n",
+    "while number != guess_me:\n",
+    "    if number < guess_me:\n",
+    "        print(\"too low\")\n",
+    "    elif number > guess_me:\n",
+    "        print(\"oops\")\n",
+    "\n",
+    "    number = number + 1\n",
+    "print(\"found it!\")"
    ]
   },
   {
@@ -45,11 +109,42 @@
    "source": [
     "### 6.3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for number in range(0,guess_me,1):\n",
+    "    if number < guess_me:\n",
+    "        print(\"too low\")\n",
+    "    elif number > guess_me:\n",
+    "        print(\"oops\")\n",
+    "        break\n",
+    "    else:\n",
+    "        break\n",
+    "print(\"found it!\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
